# ComfyUI-DazzleCommand

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  version.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml  publish-to-registry.yml
docs/: seed-control.md
examples/: DazCmd2_and_PBE2-issues_simplified.json  DazzleCommand-Basic.json  DazzleCommand-ZImage-Example.json
py/: __init__.py  dazzle_command.py
web/: dazzle_command.js  debug_logger.js
